# configurator

./: .mtn-ignore  Makefile.am  Makefile.in  configure  configure.ac  neurospaces.yml  release-expand.config
etc/neurospaces/: tag_database.yml
etc/neurospaces/developer/: build.yml
morphology2ndf/: morphology2ndf.yml
project_browser/: project_browser.yml
readcell2ndf/: readcell2ndf.yml
sesa/: sesa.yml
